# MayaBot

./: README.md  keepalive.py  main.py  pyproject.toml  reactrole.json
data/db/: build.sql  database.db
lib/db/: db.py
mybot/db/: db.py
